# python_web_10.2

./: pyproject.toml
notes/noteapp/migrations/: 0001_initial.py
notes/notes/: settings.py
