[tool.poetry]
name = "python-web-10-2"
version = "0.1.0"
description = ""
authors = ["BogdanKozlov35 <bkozlov35@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_10"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
